--- a/_posts/2017-08-28-Ankama.markdown
+++ b/_posts/2017-08-28-Ankama.markdown
@@ -1,15 +1,15 @@
 ---
-title: Dreams
-subtitle: Website Design
+title: Transmedia Game Portfoio
+subtitle: Desktop & Mobile UA | ASO
 layout: default
 modal-id: 1
-date: 2014-07-18
+date: 2017-08-28
 img: dreams.png
 thumbnail: dreams-thumbnail.png
 alt: image-alt
-project-date: April 2014
-client: Start Bootstrap
-category: Web Development
+project-date: August 2017 - March 2018
+client: Ankama
+category: Full-time, Onsite
 description: Lorem ipsum dolor sit amet, usu cu alterum nominavi lobortis. At duo novum diceret. Tantas apeirian vix et, usu sanctus postulant inciderint ut, populo diceret necessitatibus in vim. Cu eum dicam feugiat noluisse.
 
 ---
