--- a/_posts/2012-10-01-Gameloft.markdown
+++ b/_posts/2012-10-01-Gameloft.markdown
@@ -1,15 +1,15 @@
 ---
-title: Mobile MMORPG & Movie IP
-subtitle: Product Marketing
+title: Gameloft - Product Marketing
+subtitle: Branding and launching AAA mobile games
 layout: default
 modal-id: 5
 date: 2012-10-01
-img: startup-framework.png
-thumbnail: startup-framework-thumbnail.png
-alt: image-alt
+img: gameloft.jpg
+thumbnail: gameloft-thumbnail.jpg
+alt: Gameloft - Product Marketing in China
 project-date: 2012, October - 2014, May
 client: Gameloft Beijing
-category: Full-Time, Onsite
-description: Lorem ipsum dolor sit amet, usu cu alterum nominavi lobortis. At duo novum diceret. Tantas apeirian vix et, usu sanctus postulant inciderint ut, populo diceret necessitatibus in vim. Cu eum dicam feugiat noluisse.
-
+category: Employment, Onsite
+description: As a Product Marketing Manager for Gameloft, I was embedded in the development teams in their Beijing studio to strategise and coordinate execution of the Launch and Evolution marketing plan. I worked closely with the game teams to ensure all branding initiatives were tied to the game's creative vision, along with ensuring smooth communications between Gameloft and various IP holders when the game was a licensed product. 
+video: MtyHUhaQihQ
 ---
