--- a/_posts/2017-08-28-Ankama.markdown
+++ b/_posts/2017-08-28-Ankama.markdown
@@ -1,14 +1,14 @@
 ---
-title: Ankama Games - UA and ASO
-subtitle: Growing user base at scale and optimizing player experience
+title: Ankama Games - UA, ASO and Product
+subtitle: Growing user base at scale and optimising player experience
 layout: default
 modal-id: 1
 date: 2017-08-28
-img: dreams.png
-thumbnail: dreams-thumbnail.png
-alt: image-alt
+img: akm.jpg
+thumbnail: akm-thumbnail.jpg
+alt: Ankama - User Acquisition, App Store Optimisation and Product Consultancy
 project-date: August 2017 - March 2018
 client: Ankama
-category: Retainer, Onsite (France)
-description: I worked with the Ankama user acquisition lead to set up and run UA campaigns across various channels. My product vision also led me to advise the development teams in optimizing their games' UX and monetisation. Ankama is a broad transmedia publisher, whose IPs span supports as varied as PC games, animated TV shows, comic books, and board games and merchandising.
+category: Employment, Onsite (France)
+description: I worked with the Ankama user acquisition lead to set up and run UA campaigns across various channels. My product vision also led me t o advise the development teams in optimising their games' UX and monetisation. Ankama is a broad transmedia publisher, whose IPs span supports as varied as PC games, animated TV shows, comic books, and board games and merchandising.
 ---
