Changed all Is to Wes

--- a/_posts/2012-10-01-Gameloft.markdown
+++ b/_posts/2012-10-01-Gameloft.markdown
@@ -10,6 +10,6 @@ alt: Gameloft - Product Marketing in China
 project-date: 2012, October - 2014, May
 client: Gameloft Beijing
 category: Employment, Onsite
-description: As a Product Marketing Manager for Gameloft, I was embedded in the development teams in their Beijing studio to strategise and coordinate execution of the Launch and Evolution marketing plan. <br/><br/>I worked closely with the game teams to ensure all branding initiatives were tied to the game's creative vision, along with ensuring smooth communications between Gameloft and various IP holders when the game was a licensed product. 
+description: As a Product Marketing Manager for Gameloft, Xavier was embedded in the development teams in their Beijing studio to strategise and coordinate execution of the Launch and Evolution marketing plan. <br/><br/>He worked closely with the game teams to ensure all branding initiatives were tied to the game's creative vision, along with ensuring smooth communications between Gameloft and various IP holders when the game was a licensed product. 
 video: MtyHUhaQihQ
 ---
