--- a/_posts/2016-01-15-5J.markdown
+++ b/_posts/2016-01-15-5J.markdown
@@ -10,6 +10,6 @@ alt: Fifth Journey - Marketing Strategy and Operations
 project-date: January 2016 - August 2017
 client: Fifth Journey
 category: Retainer, Remote (France, Hong-Kong, California)
-description: During my tenure as Head of Marketing at Fifth Journey, I accompanied the CEO and creative teams in defining and executing the marketing strategy for its portfolio of Hollywood IP-related mobile games. <br/><br/>I worked hand-in-hand with the production director to set up a comprehensive tech stack across all their titles, allowing the team to operate critical services such as attribution, analytics, community and CRM. <br/><br/>In close cooperation with their stakeholders in Hollywood, I devised and executed cross-marketing operations aimed at increasing both game and IP performance. Alongside Kubo a Samurai Quest, I worked on 4 still-unannounced projects (among which VR and AR titles).
+description: During his tenure as Head of Marketing at Fifth Journey, Xavier accompanied the CEO and creative teams in defining and executing the marketing strategy for its portfolio of Hollywood IP-related mobile games. <br/><br/>He worked hand-in-hand with the  Creative Director to set up a comprehensive tech stack across all their titles, allowing the team to operate critical services such as attribution, analytics, community and CRM. <br/><br/>In close cooperation with their stakeholders in Hollywood, he devised and executed cross-marketing operations aimed at increasing both game and IP performance. Alongside Kubo a Samurai Quest, Xavier worked on 4 still-unannounced projects (among which VR and AR titles).
 video: biSKQ7DFbv8
 ---
